--- a/k8s/backend-deployment.yml
+++ b/k8s/backend-deployment.yml
@@ -1,3 +1,14 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: chat-backend
+spec:
+  selector:
+    app: chat-backend
+  ports:
+    - port: 8080
+      targetPort: 8080
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
