--- a/k8s/frontend-deployment.yml
+++ b/k8s/frontend-deployment.yml
@@ -1,3 +1,15 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend
+spec:
+  selector:
+    app: frontend
+  ports:
+    - port: 80
+      targetPort: 80
+  type: NodePort 
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,6 +26,6 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: rainhyeon/frontend:latest
+          image: iiilee0907/frontend:1
           ports:
             - containerPort: 80
