STOMP 프로토콜로 변경

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   kafka:
-    bootstrap-servers: kafka.default.svc.cluster.local:9092  # Helm으로 설치된 Kafka 주소
+    bootstrap-servers: kafka:9092  # Helm으로 설치된 Kafka 주소
     consumer:
       group-id: chat-group
       auto-offset-reset: earliest
