frontend websocket 연결 완료

--- a/k8s/frontend-deployment.yml
+++ b/k8s/frontend-deployment.yml
@@ -49,7 +49,8 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: iiilee0907/frontend:1
+        image: iiilee0907/frontend:2
+        imagePullPolicy: Always
         ports:
           - containerPort: 80
         volumeMounts:
