EC2의 EFS 서버로 변경:

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -4,7 +4,7 @@ metadata:
   name: spring-chat
 build:
   artifacts:
-    - image: iiilee0907/chat-backend
+    - image: iiilee0907/chat-backend-ec2
       context: backend
       jib: {}
   tagPolicy:
