--- a/k8s/backend-deployment.yml
+++ b/k8s/backend-deployment.yml
@@ -27,6 +27,7 @@ spec:
     spec:
       containers:
         - name: chat-backend
-          image: iiilee0907/chat-backend:latest
+          image: iiilee0907/chat-backend-ec2:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
