ws 접근 불가능

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -15,4 +15,4 @@ spring:
         sasl.jaas.config: >
           org.apache.kafka.common.security.scram.ScramLoginModule required
           username="user1"
-          password="iLnBC8HsSz";
+          password="tZES4Txl4T";
