--- a/charts/kafka/templates/deployment.yaml
+++ b/charts/kafka/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "kafka.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.controller.replicaCount }}
   selector:
     matchLabels:
       {{- include "kafka.selectorLabels" . | nindent 6 }}
