--- a/charts/kafka/templates/service.yaml
+++ b/charts/kafka/templates/service.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.service.ports.client }}
       targetPort: 9092
   selector:
     {{- include "kafka.selectorLabels" . | nindent 4 }}
