--- a/k8s/backend-deployment.yml
+++ b/k8s/backend-deployment.yml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: chat-backend
+  lables:
+    app:  chat-backend
+    argocd.argoproj.io/instance: chat-backend
 spec:
   selector:
     app: chat-backend
